SynProdGITV1/force-app/main/default/objects/Log__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>The severity of the Error</description>
    <inlineHelpText>The severity of the Error</inlineHelpText>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>