SynProdGITV1/force-app/main/default/objects/Log__c/fields/Ready_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Deletion__c</fullName>
    <description>The filed checks if the record is ready for deletion based on the duration defined on the custom metadata type Log Retention Duration</description>
    <formula>( TODAY() -  DATEVALUE(CreatedDate) ) &gt;  $CustomMetadata.Log_Retention_Duration__mdt.Log_Retention.Duration__c</formula>
    <label>Ready For Deletion</label>
    <type>Checkbox</type>
</CustomField>