SynProdGITV1/force-app/main/default/objects/Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The Id of the Primary Record this Error relates to</description>
    <inlineHelpText>The Id of the Primary Record this Error relates to</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>