SynProdGITV1/force-app/main/default/objects/Log__c/fields/Record_Info__c.field-meta.xml
<CustomField>
    <fullName>Record_Info__c</fullName>
    <description>The related record info (e.g. Batch Job Id, Contact Id etc)</description>
    <inlineHelpText>The related record info (e.g. Batch Job Id, Contact Id etc)</inlineHelpText>
    <label>Record Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>