SynProdGITV1/force-app/main/default/objects/Log__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>The type of the Source that raised the error e.g Apex, Flow, Integration</description>
    <inlineHelpText>The type of the Source that raised the error e.g Apex, Flow, Integration</inlineHelpText>
    <label>Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>