SynProdGITV1/force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Method__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stack_Trace__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>